test: CMakeLists.txt: Added a new test
Added build instructions for a new test.

Signed-off-by: Oleg Vorobiov <oleg.vorobiov@hobovrlabs.org>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,7 +10,16 @@ add_executable(lsc_test
 	test.cpp
 )
 
+add_executable(lsc_test2
+	test2.cpp
+)
+
 target_link_libraries(lsc_test
+	-lpthread
+	lazy_sockets
+)
+
+target_link_libraries(lsc_test2
 	-lpthread
 	lazy_sockets
 )
