--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,7 +11,7 @@ add_executable(lsc_test
 )
 
 add_executable(lsc_test2
-	test2.cpp
+	test2.cpp doctest.h
 )
 
 target_link_libraries(lsc_test
@@ -23,3 +23,9 @@ target_link_libraries(lsc_test2
 	-lpthread
 	lazy_sockets
 )
+
+set(ENV{CTEST_OUTPUT_ON_FAILURE} 1)
+target_compile_features(lsc_test2 PRIVATE cxx_std_17)
+
+add_test(NAME test1 COMMAND lsc_test)
+add_test(NAME test2 COMMAND lsc_test2)
