test: Added a driver mock test
It mimics our driver's logic signal vise.

Signed-off-by: Oleg Vorobiov <oleg.vorobiov@hobovrlabs.org>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -14,6 +14,11 @@ add_executable(lsc_test2
 	test2.cpp doctest.h
 )
 
+add_executable(driver_socket_mock
+	driver_socket_mock.cpp doctest.h
+	timer.cpp timer.h packets.h
+)
+
 target_link_libraries(lsc_test
 	-lpthread
 	lazy_sockets
@@ -24,8 +29,15 @@ target_link_libraries(lsc_test2
 	lazy_sockets
 )
 
+target_link_libraries(driver_socket_mock
+	-lpthread
+	lazy_sockets
+)
+
 set(ENV{CTEST_OUTPUT_ON_FAILURE} 1)
 target_compile_features(lsc_test2 PRIVATE cxx_std_17)
+target_compile_features(driver_socket_mock PRIVATE cxx_std_17)
 
 add_test(NAME test1 COMMAND lsc_test)
 add_test(NAME test2 COMMAND lsc_test2)
+add_test(NAME test3 COMMAND driver_socket_mock)
