README: fixed examples and added to tests.
Added test_readme_client and test_readme_server to ensure README example
code at least compiles. Turned tests back off by default.

Signed-off-by: Josh Miklos <josh.miklos@hobovrlabs.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 
 project(lazy_sockets)
 
-option(LSC_BUILD_TESTS "Build tests for lazy_sockets" ON)
+option(LSC_BUILD_TESTS "Build tests for lazy_sockets" OFF)
 
 if (LSC_BUILD_TESTS)
     enable_testing()
